[package]
name = "goseis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.2"
byteorder = "1.5.0"
giga-segy-in = "0.3.1"
giga-segy-core =  { version = "0.3.1" , features = ["gen_cbindings"]}
serde_json = "1.0.1"
gnuplot = "0.0.43"
